--- a/assets/_sass/components/_buttons.scss
+++ b/assets/_sass/components/_buttons.scss
@@ -16,11 +16,14 @@
   padding: ms(0) ms(2) ms(0)*1.05;
   position: relative;
   text-transform: uppercase;
-  transition: box-shadow 150ms ease-out, color 150ms linear, transform 150ms ease-in-out;
+  transition:
+    box-shadow 150ms ease-out,
+    color 150ms linear,
+    transform 150ms ease-in-out;
+}
 
-  &:hover {
+  .button:hover {
     box-shadow: inset 0 0 0 3em $black;
     color: $bg;
     transform: scale3d(1.05, 1.05, 1);
   }
-}
