--- a/assets/_sass/components/_site-header.scss
+++ b/assets/_sass/components/_site-header.scss
@@ -1,88 +1,86 @@
 // Site header
 // ===========
 
-.site-header {
-  &__logo {
+.site-header__logo {
+  @include unstyled-link;
+
+  color: $black;
+  font-size: ms(1);
+  font-weight: 700;
+}
+
+.site-header__role {
+  color: $gray;
+  font-weight: 500;
+}
+
+.site-header__nav {
+  @include inline-list(ms(3));
+}
+
+  .site-header__nav > a {
     @include unstyled-link;
 
-    color: $black;
-    font-size: ms(1);
-    font-weight: 700;
+    color: darken($light-gray, 7.5%);
+    font-family: $sans;
+    // padding-bottom: ms(-6);
+    // padding-top: ms(-6);
+    // position: relative;
+
+    // &::after {
+    //   background: currentColor;
+    //   bottom: 0;
+    //   content: '';
+    //   height: 2px;
+    //   left: 0;
+    //   position: absolute;
+    //   transform: scaleX(0);
+    //   transform-origin: left center;
+    //   transition: transform 125ms ease-in-out;
+    //   width: 100%;
+    // }
+
+    // &:hover, &.is-active {
+    //   &::after {
+    //     transform: scale(1);
+    //   }
+    // }
   }
 
-  &__role {
-    color: $gray;
-    font-weight: 500;
-  }
-
-  &__nav {
-    @include inline-list(ms(3));
-
-    > a {
-      @include unstyled-link;
-
-      color: darken($light-gray, 7.5%);
-      font-family: $sans;
-      // padding-bottom: ms(-6);
-      // padding-top: ms(-6);
-      // position: relative;
-
-      // &::after {
-      //   background: currentColor;
-      //   bottom: 0;
-      //   content: '';
-      //   height: 2px;
-      //   left: 0;
-      //   position: absolute;
-      //   transform: scaleX(0);
-      //   transform-origin: left center;
-      //   transition: transform 125ms ease-in-out;
-      //   width: 100%;
-      // }
-
-      // &:hover, &.is-active {
-      //   &::after {
-      //     transform: scale(1);
-      //   }
-      // }
-
-      &.is-active {
-        // box-shadow: 0 2px 0 $black;
-        color: $black;
-      }
+    .site-header__nav > a.is-active {
+      // box-shadow: 0 2px 0 $black;
+      color: $black;
     }
+
+.site-header__external {
+  @include horizontal(ms(0));
+}
+
+  .site-header__external > a {
+    display: inline-block;
+    user-select: none;
+    vertical-align: middle;
   }
 
-  &__external {
-    @include horizontal(ms(0));
+    .site-header__external > a:not(:hover):not(:focus) > .icon {
+        color: $light-gray;
+    }
 
-    > a {
+    .site-header__external > a > .icon {
       display: inline-block;
-      user-select: none;
-      vertical-align: middle;
-
-      &:not(:hover):not(:focus) {
-        > .icon {
-          color: $light-gray;
-        }
-      }
-
-      > .icon {
-        display: inline-block;
-        font-size: 1.333em;
-      }
+      font-size: 1.333em;
     }
-  }
 
-  @include query(expanded) {
+@include query(expanded) {
+  .site-header {
     align-items: baseline;
     display: flex;
 
     @include compact;
+  }
 
-    &__nav {
-      flex: 1;
-      text-align: center;
-    }
+  .site-header__nav {
+    flex: 1;
+    text-align: center;
   }
 }
